--- a/backends/translation-search/app/public/index.html
+++ b/backends/translation-search/app/public/index.html
@@ -208,6 +208,7 @@
             const {source, content} = h;
             const result = translator.translate(content, userLang, source);
             const badge = STATUS[result.totalStatus] || {cls: 'bg-secondary', label: result.totalStatus};
+            const tdURL = `https://translation.nemelex.cards/admin/core/matcher/translationdata/?source=${encodeURIComponent(source)}&content=${encodeURIComponent(content)}&type=raw`;
             const matcherURL = `https://translation.nemelex.cards/admin/core/matcher/add/?category=${encodeURIComponent(source)}&raw=${encodeURIComponent(content)}&type=raw`;
             const id = Math.random().toString(36).slice(2);
             const card = document.createElement('div');
@@ -216,6 +217,7 @@
           <div class="text-truncate">Source: <span class="fw-semibold">${esc(source)}</span></div>
           <div class="d-flex align-items-center gap-2">
             <button class="btn btn-outline-secondary btn-sm" data-toggle-json="${id}">Result</button>
+            <a href="${tdURL}" target="_blank" class="btn btn-outline-primary btn-sm">To favorite</a>
             <a href="${matcherURL}" target="_blank" class="btn btn-outline-primary btn-sm">To matcher</a>
             <span class="badge status-badge ${badge.cls}">${badge.label}</span>
           </div>
